Image support-ish

--- a/css/quiz.css
+++ b/css/quiz.css
@@ -5,3 +5,12 @@
 .green a {
   background-color: green !important;
 }
+
+.answer-img {
+  max-height: 150px;
+  margin: 0 auto;
+}
+
+.answers {
+  margin: 0 auto 0;
+}
