--- a/css/quiz.css
+++ b/css/quiz.css
@@ -11,6 +11,12 @@
   margin: 0 auto;
 }
 
-.answers {
-  margin: 0 auto 0;
+.icon {
+  position:absolute !important;
+  width: 100%;
+  left: 0;
+  top: 5% !important;
+  font-size: 8em;
+  text-align: center;
+  opacity: .5;
 }
