--- a/css/quiz.css
+++ b/css/quiz.css
@@ -14,11 +14,8 @@
 .icon {
   z-index: 1;
   position:absolute !important;
-  width: 100%;
-  left: 0;
-  top: 20% !important;
-  font-size: 4em;
   text-align: center;
+  left: 25%;
   opacity: .5;
 }
 
